--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vuepic/vue-datepicker": "^7.3.0",
     "pinia": "^2.1.7",
     "vue": "^3.3.4",
+    "vue-flatpickr-component": "^11.0.3",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
